--- a/cli/package.json
+++ b/cli/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "latest",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "clsx": "latest",
     "next": "latest",
