--- a/cli/package.json
+++ b/cli/package.json
@@ -12,6 +12,8 @@
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "socket.io": "^2.3.0"
   },
   "scripts": {
@@ -19,5 +21,8 @@
     "build": "next build",
     "start": "next start",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
   }
 }
