--- a/cli/package.json
+++ b/cli/package.json
@@ -15,7 +15,9 @@
     "react-dom": "latest",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "socket.io": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.3.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "dev": "next",
