--- a/cli/package.json
+++ b/cli/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "clsx": "latest",
     "next": "latest",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.1",
     "package.json": "^2.0.1",
     "prop-types": "latest",
@@ -15,7 +16,8 @@
     "react-dom": "latest",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
     "socket.io": "^2.3.0",
     "styled-components": "^5.1.1"
   },
